<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/hearder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hearder_appName_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <Button
                android:id="@+id/nav_settings_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Settings" />

        </LinearLayout>

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <TextView
                        android:id="@+id/stats_alcoholLevel_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/stats_title_alcohol_level" />

                    <ProgressBar
                        android:id="@+id/stats_alcoholLevel_bar"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:max="100"
                        android:progress="90" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <TextView
                        android:id="@+id/stats_hunger_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/stats_title_hunger_level" />

                    <ProgressBar
                        android:id="@+id/stats_hunger_bar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:max="100"
                        android:progress="10" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <TextView
                        android:id="@+id/stats_urine_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/stats_title_urine_level" />

                    <ProgressBar
                        android:id="@+id/stats_urine_bar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:max="100"
                        android:progress="10" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/stats_coins_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:text="@string/stats_title_coins" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="485dp">

        </FrameLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/nav"
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/nav_home_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                app:icon="@drawable/icon_home"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/nav_games_button"
                style=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                app:icon="@drawable/icon_games"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/nav_shop_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                app:icon="@drawable/icon_shop"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/nav_storage_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                app:icon="@drawable/icon_storage"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>